src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Number_of_Active_Availability_Comments__c</fullName>
        <label>Number of Active Availability Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Availability</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Complaints_Other__c</fullName>
        <label>Number of Active Complaints Other</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Complaints Other</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Inquiry_Comments__c</fullName>
        <label>Number of Active Inquiry Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Inquiry</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_PQC_Comments__c</fullName>
        <label>Number of Active PQC Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Product Quality Complaint</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Testimonial_Comments__c</fullName>
        <label>Number of Active Testimonial Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Testimonial</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Adverse_Event__c</fullName>
        <label>Number of Adverse Event</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Adverse Event</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Availability_Comments__c</fullName>
        <label>Number of Availability Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Availability</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Complaints_Other__c</fullName>
        <description>This is recording the number of complaints other.</description>
        <label>Number of Complaints Other</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Complaints Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Inquiry_Comments__c</fullName>
        <label>Number of Inquiry Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Inquiry</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_PQC_Comments__c</fullName>
        <label>Number of PQC Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Product Quality Complaint</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Testimonial_Comments__c</fullName>
        <label>Number of Testimonial Comments</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Testimonial</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Address__c</fullName>
        <formula>IF( Contact.Other_Address_Line_1__c != NULL , Contact.Other_Address_Line_1__c , 
IF(Contact.Other_Address_Line_2__c !=NULL,Contact.Other_Address_Line_2__c,
IF(Contact.Other_Address_Line_3__c!=NULL, Contact.Other_Address_Line_3__c, &apos; &apos;)))
&amp; IF(Contact.Other_City__c!=NULL, &quot;, &quot;&amp; Contact.Other_City__c, &apos; &apos;)
&amp; IF(Contact.Other_State_Province__c!=NULL, &quot;, &quot; &amp; Contact.Other_State_Province__c, &apos; &apos;)
&amp; IF(Contact.Other_Postal_Code__c!=NULL,&apos;, &apos; &amp; Contact.Other_Postal_Code__c, &apos; &apos;) 
&amp; IF(Contact.Other_Country__c != NULL, &apos;, &apos; &amp; Contact.Other_Country__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix_Title__c</fullName>
        <description>This field is used as a merge field in the Conga Templates/Email Templates. This field uses values from &apos;Metadata Title Prefix&apos; object to populate full title. See there is a trigger that populates the this field.</description>
        <label>Prefix Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <formula>IF( Contact.Primary_Address_Line_1__c != NULL , Contact.Primary_Address_Line_1__c, 
IF(Contact.Primary_Address_Line_2__c !=NULL,Contact.Primary_Address_Line_2__c,
IF(Contact.Primary_Address_Line_3__c!=NULL,Contact.Primary_Address_Line_3__c, &apos;&apos;)))
&amp; IF(Contact.Primary_City__c!=NULL, &apos;, &apos; &amp; Contact.Primary_City__c, &apos;&apos;) 
&amp; IF(Contact.Primary_State_Province__c !=NULL, &apos;, &apos; &amp; Contact.Primary_State_Province__c, &apos; &apos;)
&amp; IF(Contact.Primary_Postal_Code__c!=NULL,&apos;, &apos; &amp; Contact.Primary_Postal_Code__c, &apos;&apos;)
&amp; IF( Contact.Primary_Country__c  != NULL,&apos;, &apos; &amp; Contact.Primary_Country__c , &apos;&apos;)</formula>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Date__c</fullName>
        <formula>TEXT(Priority) &amp;&apos; - &apos;&amp; TEXT(DATETIMEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority - Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probing_Questions__c</fullName>
        <description>This will house all probing questions and their answers</description>
        <label>Probing Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Available__c</fullName>
        <label>Product Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Details__c</fullName>
        <label>Product Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Return_Status__c</fullName>
        <description>Hidden field used by workflows to manage sending of reminders for product returns</description>
        <label>Product Return Reminder Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Requested - Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Product Requested - Attempt 2</fullName>
                </value>
                <value>
                    <fullName>Product Requested - Attempt 3</fullName>
                </value>
                <value>
                    <fullName>Not Received after 3 Attempts</fullName>
                </value>
                <value>
                    <fullName>Consumer has sent</fullName>
                </value>
                <value>
                    <fullName>Product Received</fullName>
                </value>
                <value>
                    <fullName>No - Consumer unwilling to return</fullName>
                </value>
                <value>
                    <fullName>No - Product discarded/unavailable</fullName>
                </value>
                <value>
                    <fullName>Photo - Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Photo - Attempt 2</fullName>
                </value>
                <value>
                    <fullName>Photo - Attempt 3</fullName>
                </value>
                <value>
                    <fullName>Photo Received</fullName>
                </value>
                <value>
                    <fullName>Photo Sufficient</fullName>
                </value>
                <value>
                    <fullName>Product/Photo no longer needed</fullName>
                </value>
                <value>
                    <fullName>Photo Not Received</fullName>
                </value>
                <value>
                    <fullName>Photo - Final Attempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_Rollup__c</fullName>
        <label>Promotion Rollup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Province2__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Change_Date__c</fullName>
        <label>Queue Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Queue_Changed__c</fullName>
        <label>Queue Changed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_For_Writing_Number__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>ALM 1251. Populates number from contact us for MCAR when created from contact us page. Defaults to 0 when created from salesforce.</description>
        <label>Reason For Writing Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassign_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassign Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <externalId>true</externalId>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeater_Case__c</fullName>
        <label>Repeater Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraudulent Case</fullName>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repeater_Status_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeater Status Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returned_Products__c</fullName>
        <description>Number of Case Products in &apos;Product Received&apos; status</description>
        <label>Returned Products</label>
        <summaryFilterItems>
            <field>Case_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Product Received</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Product__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMO__c</fullName>
        <externalId>true</externalId>
        <label>SMO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Return_Type__c</fullName>
        <description>Return type for Case - cannot be a mixture of physical/digital</description>
        <inlineHelpText>Return type for Case - cannot be a mixture of physical/digital</inlineHelpText>
        <label>Selected Return Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_CCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to CCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>12 Pods/Liquidtab/pacs safety</fullName>
                </value>
                <value>
                    <fullName>12 Safe Home</fullName>
                </value>
                <value>
                    <fullName>13 US Oral Rinse Recall</fullName>
                </value>
                <value>
                    <fullName>14 Cosmetics</fullName>
                </value>
                <value>
                    <fullName>14 Marriage</fullName>
                </value>
                <value>
                    <fullName>14 Microbeads</fullName>
                </value>
                <value>
                    <fullName>15 Watchdog</fullName>
                </value>
                <value>
                    <fullName>2015_Europe_MaxFactor_Smell</fullName>
                </value>
                <value>
                    <fullName>2015_UK_Pampers_Metal</fullName>
                </value>
                <value>
                    <fullName>2015 Crest Whitestrips</fullName>
                </value>
                <value>
                    <fullName>2015 Diaper Issue</fullName>
                </value>
                <value>
                    <fullName>2015 Divestitures</fullName>
                </value>
                <value>
                    <fullName>2016_Brazil_ConfortSec</fullName>
                </value>
                <value>
                    <fullName>2016 Japan Whisper Recall</fullName>
                </value>
                <value>
                    <fullName>2016 PHMB Haircare</fullName>
                </value>
                <value>
                    <fullName>2016 Tampax Excess Plastic</fullName>
                </value>
                <value>
                    <fullName>2017_Pampers_Ingredients</fullName>
                </value>
                <value>
                    <fullName>2017 Digital Brandsaver</fullName>
                </value>
                <value>
                    <fullName>2017 Febreze Ingredients</fullName>
                </value>
                <value>
                    <fullName>2017 Pampers Wipes FM</fullName>
                </value>
                <value>
                    <fullName>2017 Pantene Japan Recall</fullName>
                </value>
                <value>
                    <fullName>3.15 Consumer Day</fullName>
                </value>
                <value>
                    <fullName>ANZ Metamucil Labelling Error</fullName>
                </value>
                <value>
                    <fullName>AODA</fullName>
                </value>
                <value>
                    <fullName>Call back</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Crest Advertising Media March 2015</fullName>
                </value>
                <value>
                    <fullName>Data Breach</fullName>
                </value>
                <value>
                    <fullName>Executive Escalation</fullName>
                </value>
                <value>
                    <fullName>Golden Shield</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Place to enter the verbatim from the caller</description>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Call_ID__c</fullName>
        <description>Field used for agents to copy and paste the call recording reference ID from the contact center telephony system.</description>
        <inlineHelpText>Use for call recording reference number - Max 50 alphanumeric characters permitted</inlineHelpText>
        <label>System Call ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms and Conditions Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Closed_Fulfillment_Amount__c</fullName>
        <label>Total Closed Fulfillment Amount</label>
        <summarizedField>Fulfillment_Order__c.Total_Monetary_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Fulfillment_Order__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Fulfillment_Order__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fulfillment_Amount__c</fullName>
        <label>Total Fulfillment Amount</label>
        <summarizedField>Fulfillment_Order__c.Total_Monetary_Value__c</summarizedField>
        <summaryForeignKey>Fulfillment_Order__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unable_To_Find_Product__c</fullName>
        <description>Product description from EmailUs page when consumer cannot find a product</description>
        <label>Unable To Find Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pkbgeolocalization__c</fullName>
        <description>Store the geolocalization of the customer on case creation from mobile.</description>
        <inlineHelpText>Where the customer was when the case has been created</inlineHelpText>
        <label>Customer Geolocalization</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <listViews>
        <fullName>AA_Australia_Case</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>AA - Australia</label>
        <language>en_US</language>
        <queue>AA_Australia</queue>
        <sharedTo>
            <group>AA_English_AU_NZ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Australia_Follow_Up</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <columns>Initial_Case_Submission_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Open</value>
        </filters>
        <label>AA - Australia Follow Up</label>
        <language>en_US</language>
        <queue>AA_Australia</queue>
        <sharedTo>
            <group>AA_English_AU_NZ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Chinese_Case</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Brand__c</columns>
        <columns>Country__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>AA - Malaysia Singapore Chinese</label>
        <language>en_US</language>
        <queue>AA_Malaysia_Singapore_Chinese</queue>
        <sharedTo>
            <group>AA_Chinese</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Indonesia_Case</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>AA - Indonesia</label>
        <language>en_US</language>
        <queue>AA_Indonesia</queue>
        <sharedTo>
            <group>AA_Indonesian</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Indonesia_Follow_Up</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <columns>Initial_Case_Submission_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Open</value>
        </filters>
        <label>AA - Indonesia Follow Up</label>
        <language>en_US</language>
        <queue>AA_Indonesia</queue>
        <sharedTo>
            <group>AA_Indonesian</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Malaysia_Case</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>AA - Malaysia</label>
        <language>en_US</language>
        <queue>AA_Malaysia</queue>
        <sharedTo>
            <group>AA_Malay</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Malaysia_Follow_Up</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <columns>Initial_Case_Submission_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Open</value>
        </filters>
        <label>AA - Malaysia Follow Up</label>
        <language>en_US</language>
        <queue>AA_Malaysia</queue>
        <sharedTo>
            <group>AA_Malay</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Malaysia_Singapore_Chinese_FollowUp</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Brand__c</columns>
        <columns>Country__c</columns>
        <columns>Initial_Case_Submission_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Open</value>
        </filters>
        <label>AA - Malaysia Singapore Chinese FollowUp</label>
        <language>en_US</language>
        <queue>AA_Malaysia_Singapore_Chinese</queue>
        <sharedTo>
            <group>AA_Chinese</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_New_Zealand_Case</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>AA - New Zealand</label>
        <language>en_US</language>
        <queue>AA_New_Zealand</queue>
        <sharedTo>
            <group>AA_English_AU_NZ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_New_Zealand_Follow_Up</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <columns>Initial_Case_Submission_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Open</value>
        </filters>
        <label>AA - New Zealand Follow Up</label>
        <language>en_US</language>
        <queue>AA_New_Zealand</queue>
        <sharedTo>
            <group>AA_English_AU_NZ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Philippines_Case</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>AA - Philippines</label>
        <language>en_US</language>
        <queue>AA_Philippines</queue>
        <sharedTo>
            <group>AA_Tagalog</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Philippines_Follow_Up</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <columns>Initial_Case_Submission_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Open</value>
        </filters>
        <label>AA - Philippines Follow Up</label>
        <language>en_US</language>
        <queue>AA_Philippines</queue>
        <sharedTo>
            <group>AA_Tagalog</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Reopened_by_CCM</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Australia,Indonesia,Malaysia,New Zealand,Philippines,Singapore,Thailand</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Vietnam</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Reopened by CCM</value>
        </filters>
        <label>AA - Reopened by CCM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Singapore_Case</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>AA - Singapore</label>
        <language>en_US</language>
        <queue>AA_Singapore</queue>
        <sharedTo>
            <group>AA_Malay</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AA_Singapore_Follow_Up</fullName>
        <columns>Priority_Date__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Brand__c</columns>
        <columns>Initial_Case_Submission_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Open</value>
        </filters>
        <label>AA - Singapore Follow Up</label>
        <language>en_US</language>
        <queue>AA_Singapore</queue>
        <sharedTo>
            <group>AA_Malay</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AAI_J_K</fullName>
        <active>true</active>
        <businessProcess>Country Defaults</businessProcess>
        <description>AAI - J - K Cases</description>
        <label>AAI - J - K</label>
    </recordTypes>
</CustomObject>